force-app/main/default/objects/Account/fields/Account_Summary__c.field-meta.xml
<CustomField>
    <fullName>Account_Summary__c</fullName>
    <label>Account Summary</label>
    <formula>IF(ISPICKVAL(Customer_Tier__c, &quot;Platinum&quot;), &quot;★ &quot; &amp; Name, Name) &amp; &quot; (&quot; &amp; TEXT(Health_Score__c) &amp; &quot;/100) - &quot; &amp;
IF(Is_Strategic__c, &quot;Strategic&quot;, &quot;Standard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>