force-app/main/default/objects/Account/fields/Annual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend__c</fullName>
    <label>Annual Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <inlineHelpText>Total spend in the last 12 months &amp; committed renewals</inlineHelpText>
</CustomField>