force-app/main/default/objects/Account/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetName>Tier_Values</valueSetName>
    </valueSet>
</CustomField>