force-app/main/default/objects/Account/fields/Primary_Project__c.field-meta.xml
<CustomField>
    <fullName>Primary_Project__c</fullName>
    <label>Primary Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Accounts (Primary)</relationshipLabel>
    <relationshipName>Primary_Accounts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>