force-app/main/default/objects/Account/recordTypes/SMB.recordType-meta.xml
<RecordType>
    <fullName>SMB</fullName>
    <active>true</active>
    <description>Small &amp; medium business</description>
    <label>SMB</label>
</RecordType>