force-app/main/default/objects/Account/validationRules/Strategic_Requires_Tier.validationRule-meta.xml
<ValidationRule>
    <fullName>Strategic_Requires_Tier</fullName>
    <active>true</active>
    <description>Strategic accounts must be Gold or Platinum</description>
    <errorConditionFormula>AND(Is_Strategic__c, NOT(OR(ISPICKVAL(Customer_Tier__c,&quot;Gold&quot;), ISPICKVAL(Customer_Tier__c,&quot;Platinum&quot;))))</errorConditionFormula>
    <errorDisplayField>Customer_Tier__c</errorDisplayField>
    <errorMessage>Strategic accounts must be Gold or Platinum tier.</errorMessage>
</ValidationRule>