force-app/main/default/objects/Account/listViews/Strategic_Accounts.listView-meta.xml
<ListView>
    <fullName>Strategic_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Tier__c</columns>
    <columns>Annual_Spend__c</columns>
    <columns>Health_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Strategic__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Annual_Spend__c</field>
        <operation>greaterThan</operation>
        <value>100000</value>
    </filters>
    <label>Strategic Accounts</label>
</ListView>